# NSI_pancake

./: .gitignore  CC BY-NC-ND 4.0.xmp  README.md  licence.md
C++/Componets/hetD/: CMakeLists.txt  hetD.cpp  hetD.hpp  main.cpp  test1.cpp  test2.cpp
C++/DocTest_Exemple/: CMakeLists.txt  fx2000.hpp  main.cpp  test1.cpp  test2.cpp
C++/PlaySound/: main.cpp
C++/Project/DocTest_Exemple/: fx2000.cpp
C++/Project/PlaySound/: CMakeLists.txt
Practice_NationalBank/subject_01/: ProposalForCorrection.py
Python/activites/interface_pile-LIFO/: README.md  main.py  specification.py  test_LIFO.py
Python/modules/: main.py
Python/modules/Common/: FUTUR.py  __init__.py  entry.py  logger.py
Python/projects/GestionEleves/: SGBDD.py  main.py
Python/projects/SGBDD/: SGBDD_GUI.py  main.py
Qt/Projects/: .gitignore
Qt/Projects/HelloQt/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
activites/interface_pile-LIFO/: specification.py
